add customer flow (#8)
